--- a/style.css
+++ b/style.css
@@ -23,9 +23,7 @@ body {
 
 .book {
   background-image: url(img/book.jpg);
-  background-size: contain;
-  height: 100vh;
-  width: 55vw;
+  background-size: 100% 100%;
 }
 
 .library{
